--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@
 <div class="pro_dbg">
   <div class="mainall1">
     <div class="pro_ct tc">
-     <h2> <a href="./product.html" style="color: #f39800"> 產品項目/Product</a>
-        <p style="color: #f39800; margin-top:20px">快得力的重點產品，專業訂製幫助您的店家形象提升</p>
+     <h2> <a href="./product.html" style="color: #ee7800"> 產品項目/Product</a>
+        <p style="color: #ee7800; margin-top:20px">快得力的重點產品，專業訂製幫助您的店家形象提升</p>
      </h2>
     </div>
     <div class="clearboth"></div>
     <div class="pro_c">
       <ul>
-        <li> <a href="./index.html" title="LED廣告招牌" target="_blank"> LED廣告招牌</a> </li><!-- chanpin/xtygf -->
-        <li> <a href="./index.html" title="門牌設計製作" target="_blank"> 門牌設計製作</a> </li><!-- chanpin/chuangpeng -->
-        <li> <a href="./index.html" title="品牌/通路燈箱" target="_blank"> 品牌/通路燈箱</a> </li><!-- chanpin/chepeng -->
-        <li> <a href="./index.html" title="立體字" target="_blank"> 立體字</a> </li><!-- chanpin/lutaipeng -->
-        <li> <a href="./index.html" title="指示牌/標示牌" target="_blank"> 指示牌/標示牌</a> </li><!-- chanpin/lvyilangan -->
-        <li> <a href="./index.html" title="雷射CNC切割" target="_blank"> 雷射CNC切割</a> </li><!-- chanpin/lvyidamen -->
+        <li> <a href="./index.html" title="LED廣告招牌" target="_blank" style="color: #FFF"> LED廣告招牌</a> </li><!-- chanpin/xtygf -->
+        <li> <a href="./index.html" title="門牌設計製作" target="_blank" style="color: #FFF"> 門牌設計製作</a> </li><!-- chanpin/chuangpeng -->
+        <li> <a href="./index.html" title="品牌/通路燈箱" target="_blank" style="color: #FFF"> 品牌/通路燈箱</a> </li><!-- chanpin/chepeng -->
+        <li> <a href="./index.html" title="立體字" target="_blank" style="color: #FFF"> 立體字</a> </li><!-- chanpin/lutaipeng -->
+        <li> <a href="./index.html" title="指示牌/標示牌" target="_blank" style="color: #FFF"> 空間指示牌/標示牌</a> </li><!-- chanpin/lvyilangan -->
+        <li> <a href="./index.html" title="雷射CNC切割" target="_blank" style="color: #FFF"> 雷射CNC切割</a> </li><!-- chanpin/lvyidamen -->
       </ul>
       <!-- <ul>
         <li> <a href="./index.html" title="指示牌" target="_blank"> 指示牌</a> </li>
@@ -128,33 +128,33 @@
     <div class="pro_show_n">
       <ul>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/14.html" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" alt="LED廣告招牌"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/14.html" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
+          <div class="pic"> <a href="#" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" alt="LED廣告招牌"/> </a> </div>
+          <div class="info"> <a href="#" title="LED廣告招牌" target="_blank" style="color: #FFF">LED廣告招牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/19.html" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" alt="門牌設計製作"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/19.html" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
+          <div class="pic"> <a href="#" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" alt="門牌設計製作"/> </a> </div>
+          <div class="info"> <a href="#" title="門牌設計製作" target="_blank" style="color: #FFF">門牌設計製作</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/17.html" title="品牌/通路燈箱" target="_blank"> <img src="images/s3.jpg" alt="品牌/通路燈箱"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/17.html" title="品牌/通路燈箱" target="_blank">品牌/通路燈箱</a> </div>
+          <div class="pic"> <a href="#" title="品牌/通路燈箱" target="_blank"> <img src="images/s3.jpg" alt="品牌/通路燈箱"/> </a> </div>
+          <div class="info"> <a href="#" title="品牌/通路燈箱" target="_blank" style="color: #FFF">品牌/通路燈箱</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/16.html" title="立體字" target="_blank"> <img src="images/s4.jpg" alt="立體字"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/16.html" title="立體字" target="_blank">立體字</a> </div>
+          <div class="pic"> <a href="#" title="立體字" target="_blank"> <img src="images/s4.jpg" alt="立體字"/> </a> </div>
+          <div class="info"> <a href="#" title="立體字" target="_blank" style="color: #FFF">立體字</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/18.html" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" alt="指示牌/標示牌"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/18.html" title="指示牌/標示牌"  target="_blank">指示牌/標示牌</a> </div>
+          <div class="pic"> <a href="#" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" alt="指示牌/標示牌"/> </a> </div>
+          <div class="info"> <a href="#" title="指示牌/標示牌"  target="_blank" style="color: #FFF">空間指示牌/標示牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/15.html" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/15.html" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
+          <div class="pic"> <a href="#" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
+          <div class="info"> <a href="#" title="雷射CNC切割" target="_blank" style="color: #FFF">雷射CNC切割</a> </div>
           <em></em>
         </li>
         <!-- <li>
@@ -208,8 +208,8 @@
   <div class="mainall1">
     <div class="case_t tc">
       <div class="pro_ct tc">
-        <h2> <a href="#" style="color: #f39800"> 企業理念/About</a>
-        <p style="color: #f39800; margin-top: 20px">完整的商業招牌計畫，協助客戶量身訂製店頭的形象</p>
+        <h2> <a href="#" style="color: #ee7800"> 企業理念/About</a>
+        <p style="color: #ee7800; margin-top: 20px">完整的商業招牌計畫，協助客戶量身訂製店頭的形象</p>
         </h2>
       </div>
     </div>
@@ -260,7 +260,7 @@
     <div class="td_t tc">
      <h4><span style="font-size: 30px">品牌顏製所/Brand</span></h4>
     </div>
-    <p style="color: #f39800; text-align: center; font-size: 16px; margin-top: 10px">台中在地招牌廣告公司，優秀職人招牌訂製</p>
+    <p style="color: #ee7800; text-align: center; font-size: 16px; margin-top: 10px">台中在地招牌廣告公司，優秀職人招牌訂製</p>
     <!-- <div class="td_tel ab">
       <p>諮詢熱線：</p>
       <span>04-23829500</span> 
@@ -502,7 +502,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
 <div class="mainall">
   <!-- <div class="honor fr mt40 wow bounceInRight">
     <div class="case_t tc">
-      <h3><a href="gongsi/rongyu/index.html" title="合作夥伴" style="color: #f39800">合作品牌
+      <h3><a href="gongsi/rongyu/index.html" title="合作夥伴" style="color: #ee7800">合作品牌
         </a></h3>
     </div>
     <div class="honor_n">
@@ -534,7 +534,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
   </div> -->
   <!-- <div class="kehu fl mt40 wow bounceInLeft">
     <div class="case_t tc">
-     <h3 style="text-align: left;"><a href="#" title="製作團隊" style="color: #f39800; text-align: left;">製作團隊
+     <h3 style="text-align: left;"><a href="#" title="製作團隊" style="color: #ee7800; text-align: left;">製作團隊
         </a></h3>
     </div>
     <div class="kehu_n">
@@ -552,15 +552,15 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
 
 <!-- <div class="link_bg mt40">
   <div class="mainall">
-    <h4 style="color: #f39800">友善連結<span style="color: #f39800">LINKS</span></h4>
-    <div class="links_n"><a href='#' target='_blank' style="color: #f39800">亞特燈箱</a> <a href='index.html' target='_blank'></a> <a href='index.html' target='_blank'></a> </div>
+    <h4 style="color: #ee7800">友善連結<span style="color: #ee7800">LINKS</span></h4>
+    <div class="links_n"><a href='#' target='_blank' style="color: #ee7800">亞特燈箱</a> <a href='index.html' target='_blank'></a> <a href='index.html' target='_blank'></a> </div>
   </div>
 </div> -->
 
 <!-- <div id="brand_carouse" class="ptb_30 text-center">
         <div class="type-01">
           <div class="heading-part mb_20 ">
-            <h2 class="main_title" style="color: #f39800">合作夥伴</h2>
+            <h2 class="main_title" style="color: #ee7800">合作夥伴</h2>
           </div>
           <div class="row">
             <div class="col-sm-12">
@@ -653,7 +653,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
               <li><a href="#" style="color: #777">門牌設計製作</a></li>
               <li><a href="#" style="color: #777">品牌/通路燈箱</a></li>
               <li><a href="#" style="color: #777">立體字</a></li>
-              <li><a href="#" style="color: #777">指示牌/標示牌</a></li>
+              <li><a href="#" style="color: #777">空間指示牌/標示牌</a></li>
               <li><a href="#" style="color: #777">雷射CNC切割</a></li>
             </ul>
           </div>
