--- a/product.html
+++ b/product.html
@@ -136,33 +136,33 @@
     <div class="pro_show_n">
       <ul>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/14.html" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" alt="LED廣告招牌"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/14.html" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
+          <div class="pic"> <a href="P1.html" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" alt="LED廣告招牌"/> </a> </div>
+          <div class="info"> <a href="P1.html" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/19.html" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" alt="門牌設計製作"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/19.html" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
+          <div class="pic"> <a href="P2.html" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" alt="門牌設計製作"/> </a> </div>
+          <div class="info"> <a href="P2.html" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/17.html" title="品牌/通路燈箱" target="_blank"> <img src="images/s3.jpg" alt="品牌/通路燈箱"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/17.html" title="品牌/通路燈箱" target="_blank">品牌/通路燈箱</a> </div>
+          <div class="pic"> <a href="P3.html" title="品牌/通路燈箱" target="_blank"> <img src="images/s3.jpg" alt="品牌/通路燈箱"/> </a> </div>
+          <div class="info"> <a href="P3.html" title="品牌/通路燈箱" target="_blank">品牌/通路燈箱</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/16.html" title="立體字" target="_blank"> <img src="images/s4.jpg" alt="立體字"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/16.html" title="立體字" target="_blank">立體字</a> </div>
+          <div class="pic"> <a href="P4.html" title="立體字" target="_blank"> <img src="images/s4.jpg" alt="立體字"/> </a> </div>
+          <div class="info"> <a href="P4.html" title="立體字" target="_blank">立體字</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/18.html" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" alt="指示牌/標示牌"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/18.html" title="指示牌/標示牌"  target="_blank">指示牌/標示牌</a> </div>
+          <div class="pic"> <a href="P5.html" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" alt="指示牌/標示牌"/> </a> </div>
+          <div class="info"> <a href="P5.html" title="指示牌/標示牌"  target="_blank">指示牌/標示牌</a> </div>
           <em></em>
         </li>
         <li>
-          <div class="pic"> <a href="1chanpin/xtygf/15.html" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
-          <div class="info"> <a href="1chanpin/xtygf/15.html" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
+          <div class="pic"> <a href="P6.html" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
+          <div class="info"> <a href="P6.html" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
         </li>
       </ul>
     </div>
@@ -611,10 +611,10 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
             <ul>
               <li><a href="./c1.html" style="color: #777">一起肉肉吧</a></li>
               <li><a href="./c2.html" style="color: #777">一拳咖啡</a></li>
-              <!-- <li><a href="#">My Orders</a></li> -->
-              <!-- <li><a href="#">My Credit Slips</a></li> -->
-              <!-- <li><a href="#">My Addresses</a></li> -->
-              <!-- <li><a href="#">My Personal Info</a></li> -->
+              <li><a href="./c3.html" style="color: #777">三喜蛋餅</a></li>
+              <li><a href="./c4.html" style="color: #777">大魔</a></li>
+              <li><a href="./c5.html" style="color: #777">天天禧</a></li>
+              <li><a href="./c6.html" style="color: #777">天承軒</a></li>
             </ul>
           </div>
           <div class="col-md-3">
