--- a/case.html
+++ b/case.html
@@ -34,7 +34,7 @@
 <div class="top_bgk"> 
   <div class="mainall">
     <div class="logo_title fl" style="max-width: 250px">
-      <a href="index.html" title="快得力廣告"><img style="max-width: 85%; margin-left: 50px" src="images/logo1105_2.png" alt="快得力廣告" border="0"></a>
+      <a href="index.html" title="快得力廣告"><img style="max-width: 85%; margin-left: 0px" src="images/logo1105_2.png" alt="快得力廣告" border="0"></a>
     </div>
     <div class="biaoyu">全台最得力品牌推手「快得力」招牌最夠力<br>Quickly, Fast, Do The Best！</div>
     <div class="clearboth"></div>
@@ -224,7 +224,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c16.html">次郎丸</a></h6>
+                      <h4 class="product-name"><a href="c16.html">次郎丸</a></h4>
+                      <h6 class="product-name">實績分類：日式料理</h6>
                     </div>
                   </div>
                 </li>
@@ -236,7 +237,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c17.html">老賴</a></h6>
+                      <h4 class="product-name"><a href="c17.html">老賴</a></h4>
+                      <h6 class="product-name">實績分類：手搖飲料店</h6>
                     </div>
                   </div>
                 </li>
@@ -248,7 +250,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c18.html">艾格創意</a></h6>
+                      <h4 class="product-name"><a href="c18.html">艾格創意</a></h4>
+                      <h6 class="product-name">實績分類：設計公司</h6>
                     </div>
                   </div>
                 </li>
@@ -260,7 +263,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c19.html">Ginn</a></h6>
+                      <h4 class="product-name"><a href="c19.html">Ginn</a></h4>
+                      <h6 class="product-name">實績分類：會館</h6>
                     </div>
                   </div>
                 </li>
@@ -272,7 +276,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c20.html">Mini Hotel</a></h6>
+                      <h4 class="product-name"><a href="c20.html">Mini Hotel</a></h4>
+                      <h6 class="product-name">實績分類：旅館</h6>
                     </div>
                   </div>
                 </li>
@@ -284,7 +289,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c21.html">USD</a></h6>
+                      <h4 class="product-name"><a href="c21.html">USD</a></h4>
+                      <h6 class="product-name">實績分類：遊戲主題餐廳</h6>
                     </div>
                   </div>
                 </li>
@@ -296,7 +302,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c22.html">大地之愛</a></h6>
+                      <h4 class="product-name"><a href="c22.html">大地之愛</a></h4>
+                      <h6 class="product-name">實績分類：商鋪店面</h6>
                     </div>
                   </div>
                 </li>
@@ -308,7 +315,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c23.html">台灣三軸</a></h6>
+                      <h4 class="product-name"><a href="c23.html">台灣三軸</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
                 </li>
@@ -320,7 +328,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c24.html">西屯區公所</a></h6>
+                      <h4 class="product-name"><a href="c24.html">西屯區公所</a></h4>
+                      <h6 class="product-name">實績分類：公家機關</h6>
                     </div>
                   </div>
                 </li>
@@ -332,7 +341,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c25.html">杏甜</a></h6>
+                      <h4 class="product-name"><a href="c25.html">杏甜</a></h4>
+                      <h6 class="product-name">實績分類：手作冰店</h6>
                     </div>
                   </div>
                 </li>
@@ -353,22 +363,22 @@
           <!-- =====  BREADCRUMB END===== -->
           <div class="row mt_10">
             <div class="col-md-6">
-              <div><a class="thumbnails" href="./c1.html"> <img class="" style="" data-name="product_image" src="images/work/c1.jpg" alt="" /></a></div>
+              <div><a class="thumbnails" href="./c1.html"> <img class="" style="" data-name="product_image" src="images/work/L1.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name"><a href="./c1.html" title="Casual Shirt With Ruffle Hem">Gogi Gogi 一起肉肉吧</a></h4>
-              <hr>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c1.html" title="">Gogi Gogi 一起肉肉吧</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
                   <span> 餐廳</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>亞特圓招、走廊燈箱、帆布架廣告</span>
+                  <span>亞特圓形招牌、走廊燈箱、帆布架廣告</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食，豐富的韓式組合、烤肉、料理深獲在地好評</p>
+              <p class="product-desc mtb_30">一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食<br>豐富的韓式組合、烤肉、料理深獲在地好評</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c1.html" title="">「...More+」</a></h4>
             </div>
           </div>
 
@@ -377,19 +387,19 @@
               <div><a class="thumbnails" href="./c2.html"> <img style="" data-name="product_image" src="images/work/L2.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name"><a href="./c2.html" title="Casual Shirt With Ruffle Hem">一拳咖啡</a></h4>
-              <hr>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c2.html" title="">一拳咖啡</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
                   <span> 咖啡廳</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>亞特圓招、背光無邊字、磁吸式5連板價目表</span>
+                  <span>亞特圓形招牌、背光無邊字、磁吸式5連板價目表</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">一拳咖啡位於北區梅庭街，為舒芙蕾及鬆餅專賣店，選用日本進口麵粉、小農鮮奶及台灣牧場元氣蛋，口感綿密鬆軟，入口即化</p>
+              <p class="product-desc mtb_30">一拳咖啡位於北區梅庭街，為舒芙蕾及鬆餅專賣店，選用日本進口麵粉<br>小農鮮奶及台灣牧場元氣蛋，口感綿密鬆軟，入口即化</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c2.html" title="">「...More+」</a></h4>
             </div>
           </div>
 
@@ -398,19 +408,19 @@
               <div><a class="thumbnails" href="./c3.html"> <img class="" style="" data-name="product_image" src="images/work/L3.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name"><a href="./c3.html" title="Casual Shirt With Ruffle Hem">三喜蛋餅</a></h4>
-              <hr>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c3.html" title="">三喜蛋餅</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
                   <span> 餐廳</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>亞特圓招、烤漆鐵件價目表、不鏽鋼烤漆立體字</span>
+                  <span>亞特圓形招牌、烤漆鐵件價目表、不鏽鋼烤漆立體字</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">三喜蛋餅位於北區太平路，是在地眾所皆知的古早味蛋餅專賣店</p>
+              <p class="product-desc mtb_30">三喜蛋餅位於北區太平路<br>是在地眾所皆知的古早味蛋餅專賣店</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c3.html" title="">「...More+」</a></h4>
             </div>
           </div>
 
@@ -419,8 +429,7 @@
               <div><a class="thumbnails" href="./c4.html"> <img style="" data-name="product_image" src="images/work/L4.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name"><a href="./c4.html" title="Casual Shirt With Ruffle Hem">大魔</a></h4>
-              <hr>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c4.html" title="">大魔</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
@@ -431,118 +440,14 @@
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">大魔位於西屯區，是主打高級食材的鍋物料理店</p>
+              <p class="product-desc mtb_30">大魔位於西屯區<br>是主打高級食材的鍋物料理店</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c4.html" title="">「...More+」</a></h4>
             </div>
           </div>
-
-         <!--  <div class="row">
-            <div class="col-md-12">
-              <div id="exTab5" class="mtb_30">
-                <ul class="nav nav-tabs">
-                  <li class="active"> <a href="#1c" data-toggle="tab">產品規格</a> </li>
-                  <li><a href="#3c" data-toggle="tab">客戶資訊</a> </li>
-                </ul>
-                <div class="tab-content mt_20">
-                  <div class="tab-pane active" id="1c">
-                    <p>尺寸：100Ｘ100 / 規格：100cm</p>
-                    <p>這次與韓國燒肉gogigogi店頭行銷是一個將招牌應用很完整的案例，這次的方式，團隊建議裝置戶外廣告、街頭創意燈箱、LOGO字、帆布宣傳，來看看這次亞特文創規劃的廣告招牌各自有哪些特性：</p>
-                    <br>
-                    <p>🔺#戶外大型廣告帆布(背打光)🔺</p>
-                    <p>大型的帆布廣告，放置在戶外有很醒目的行銷效能，並於幾條街外都能清楚判別廣告用途，在專業的製作下擁有高解析度的輸出、色彩鮮艷顯色效果，適用於大版面輸出。</p>
-                    <p>🔺#圓形燈箱🔺</p>
-                    <p>這類型的燈箱廣告很適合吸引過路客，舉凡走在人行道逛街的遊客，包括餐飲、展覽、連鎖飲料、設計店家，適用的商店街小招牌。</p>
-                    <p>🔺#立體發光字🔺</p>
-                    <p>LED發光字源，應用的方面也很廣泛，以LOGO發光燈字為主體，造型多變，強化店頭行銷的記憶點，光源的製程是團隊製作上的。</p>
-                    <p>🔺#帆布廣告🔺</p>
-                    <p>即時性的更換，成本低也符合當季廣告的期待，讓準備前往的顧客觀察到最近店內正走的套餐優惠，很適合一季更換的店家使用。</p>
-                    <br>
-                    <p>亞特文創提供的招牌使用造型多元、宣傳便利，適應於不同地理類型的運用，也給客戶更多的選擇，相信專業團隊，就找亞特文創。</p>
-                  </div>
-                  <div class="tab-pane" id="3c">
-                    <p>Gogi Gogi 一起肉肉吧</p>
-                    <p>地址：台中市北區三民路三段166-3號</p>
-                    <p>電話：(04) 2223-5085</p>
-                    <p>時間：11:30～22:30</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-          <!-- <div class="row">
-            <div class="col-md-12">
-              <div class="heading-part text-center">
-                <h2 class="main_title mt_50">相關產品推薦</h2>
-              </div>
-            </div>
-          </div> -->
-          <!-- <div class="row">
-            <div class="product-layout product-grid related-pro owl-carousel mb_50">
-              <div class="item">
-                <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/1.jpg" alt="" title="" class="img-responsive"></a> </div>
-                  <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">圓形燈箱</a></h6>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/2.jpg" alt="" title="" class="img-responsive"></a></div>
-                  <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">長型燈箱</a></h6>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/3.jpg" alt="" title="" class="img-responsive"></a> </div>
-                  <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">玻璃貼</a></h6>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/4.jpg" alt="" title="" class="img-responsive"></div>
-                  <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">廣告招牌</a></h6>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/5.jpg" alt="" title="" class="img-responsive"></a> </div>
-                  <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="#" title="">大圖輸出</a></h6>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
         </div>
+        <h3 style="text-align:center;">❶⋄<a href="./case2.html" title="">②</a>⋄<a href="./case3.html" title="">③</a>⋄<a href="./case4.html" title="">④</a>⋄<a href="./case5.html" title="">⑤</a>⋄<a href="./case6.html" title="">⑥</a>⋄<a href="./case7.html" title="">⑦</a>⋄<a href="./case8.html" title="">⑧</a>⋄<a href="./case9.html" title="">⑨</a>⋄<a href="./case10.html" title="">⑩</a></h3>
+        <br>
       </div>
-      <!-- <div id="brand_carouse" class="ptb_30 text-center">
-        <div class="type-01">
-          <div class="heading-part mb_20 ">
-            <h2 class="main_title">Brand Logo</h2>
-          </div>
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="brand owl-carousel ptb_20">
-                <div class="item text-center"> <a href="#"><img src="images/brand/brand1.png" alt="Disney" class="img-responsive" /></a> </div>
-                <div class="item text-center"> <a href="#"><img src="images/brand/brand2.png" alt="Dell" class="img-responsive" /></a> </div>
-                <div class="item text-center"> <a href="#"><img src="images/brand/brand3.png" alt="Harley" class="img-responsive" /></a> </div>
-                <div class="item text-center"> <a href="#"><img src="images/brand/brand4.png" alt="Canon" class="img-responsive" /></a> </div>
-                <div class="item text-center"> <a href="#"><img src="images/brand/brand5.png" alt="Canon" class="img-responsive" /></a> </div>
-                <div class="item text-center"> <a href="#"><img src="images/brand/brand6.png" alt="Canon" class="img-responsive" /></a> </div>
-                <div class="item text-center"> <a href="#"><img src="images/brand/brand7.png" alt="Canon" class="img-responsive" /></a> </div>
-                <div class="item text-center"> <a href="#"><img src="images/brand/brand8.png" alt="Canon" class="img-responsive" /></a> </div>
-                <div class="item text-center"> <a href="#"><img src="images/brand/brand9.png" alt="Canon" class="img-responsive" /></a> </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </div>
     <!-- =====  CONTAINER END  ===== -->
     <!-- =====  FOOTER START  ===== -->
