--- a/case.html
+++ b/case.html
@@ -445,7 +445,8 @@
             </div>
           </div>
         </div>
-        <h3 style="text-align:center;">❶⋄<a href="./case2.html" title="">②</a>⋄<a href="./case3.html" title="">③</a>⋄<a href="./case4.html" title="">④</a>⋄<a href="./case5.html" title="">⑤</a>⋄<a href="./case6.html" title="">⑥</a>⋄<a href="./case7.html" title="">⑦</a>⋄<a href="./case8.html" title="">⑧</a>⋄<a href="./case9.html" title="">⑨</a>⋄<a href="./case10.html" title="">⑩</a></h3>
+        <h3 style="text-align:center; color:#f39800;">①<a href="./case2.html" style="color:#f39800;">﹥</a></h3>
+        <!-- <h3 style="text-align:center;">❶⋄<a href="./case2.html" title="">②</a>⋄<a href="./case3.html" title="">③</a>⋄<a href="./case4.html" title="">④</a>⋄<a href="./case5.html" title="">⑤</a>⋄<a href="./case6.html" title="">⑥</a>⋄<a href="./case7.html" title="">⑦</a>⋄<a href="./case8.html" title="">⑧</a>⋄<a href="./case9.html" title="">⑨</a>⋄<a href="./case10.html" title="">⑩</a></h3> -->
         <br>
       </div>
     </div>
