--- a/c1.html
+++ b/c1.html
@@ -32,7 +32,7 @@
 <body class="shop-detail">
 
 <div class="top_bgk"> 
-  <div class="mainall">
+  <div class="mainall" style="margin-left: 70px">
     <div class="logo_title fl" style="max-width: 250px">
       <a href="index.html" title="快得力廣告"><img style="max-width: 85%; margin-left: 0px" src="images/logo1105_2.png" alt="快得力廣告" border="0"></a>
     </div>
@@ -163,7 +163,7 @@
             <div class="col-sm-4 col-md-4 col-lg-3">
               <div class="category">
                 <div class="menu-bar" data-target="#category-menu,#category-menu-responsive" data-toggle="collapse" aria-expanded="true" role="button">
-                  <h4 class="category_text">產品項目</h4>
+                  <h4 class="category_text">分頁導覽</h4>
                   <span class="i-bar"><i class="fa fa-bars"></i></span></div>
               </div>
               <div id="category-menu-responsive" class="navbar collapse " aria-expanded="true" style="" role="button">
@@ -200,17 +200,17 @@
           <div id="category-menu" class="navbar collapse in  mb_40" aria-expanded="true" style="" role="button">
             <div class="nav-responsive">
               <ul class="nav  main-navigation collapse in">
-                <li><a href="P1.html">LED廣告招牌</a></li>
-                <li><a href="P2.html">門牌設計製作</a></li>
-                <li><a href="P3.html">品牌/通路燈箱</a></li>
-                <li><a href="P4.html">立體字</a></li>
-                <li><a href="P5.html">指示牌/標示牌</a></li>
-                <li><a href="P6.html">雷射CNC切割</a></li>
+                <li><a href="index.html">首頁</a></li>
+                <li><a href="case.html">工程實績</a></li>
+                <li><a href="product.html">產品項目</a></li>
+                <li><a href="order.html">報價諮詢</a></li>
+                <li><a href="about.html">關於我們</a></li>
+                <li><a href="news.html">最新消息</a></li>
               </ul>
             </div>
           </div>
           <!-- <div class="left_banner left-sidebar-widget mt_30 mb_40"> <a href="#"><img src="images/left1.jpg" alt="Left Banner" class="img-responsive" /></a> </div> -->
-          <div class="left-special left-sidebar-widget mb_50">
+          <div class="left-special left-sidebar-widget mb_50" style="margin-top:30px">
             <div class="heading-part mb_20 ">
               <h2 class="main_title" style="color: #f39800">熱門專案/TOP15</h2>
             </div>
@@ -224,7 +224,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c26.html">赤腳丫</a></h6>
+                      <h4 class="product-name"><a href="c26.html">赤腳丫</a></h4>
+                      <h6 class="product-name">實績分類：生態農莊</h6>
                     </div>
                   </div>
                 </li>
@@ -236,7 +237,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c27.html">和旺</a></h6>
+                      <h4 class="product-name"><a href="c27.html">和旺</a></h4>
+                      <h6 class="product-name">實績分類：小吃店</h6>
                     </div>
                   </div>
                 </li>
@@ -248,7 +250,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c28.html">坪林52家品</a></h6>
+                      <h4 class="product-name"><a href="c28.html">坪林52家品</a></h4>
+                      <h6 class="product-name">實績分類：傢俱店</h6>
                     </div>
                   </div>
                 </li>
@@ -260,7 +263,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c29.html">怪獸比薩</a></h6>
+                      <h4 class="product-name"><a href="c29.html">怪獸披薩</a></h4>
+                      <h6 class="product-name">實績分類：披薩店</h6>
                     </div>
                   </div>
                 </li>
@@ -272,7 +276,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c30.html">拉拉手親水悠遊館</a></h6>
+                      <h4 class="product-name"><a href="c30.html">拉拉手親水悠遊館</a></h4>
+                      <h6 class="product-name">實績分類：寶寶游泳館</h6>
                     </div>
                   </div>
                 </li>
@@ -284,7 +289,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c31.html">拓思拉</a></h6>
+                      <h4 class="product-name"><a href="c31.html">拓拉思</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
                 </li>
@@ -296,7 +302,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c32.html">杭締</a></h6>
+                      <h4 class="product-name"><a href="c32.html">杭締</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
                 </li>
@@ -308,7 +315,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c33.html">欣姿娜</a></h6>
+                      <h4 class="product-name"><a href="c33.html">欣姿娜</a></h4>
+                      <h6 class="product-name">實績分類：紋繡美睫</h6>
                     </div>
                   </div>
                 </li>
@@ -320,7 +328,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c34.html">法萊空間設計</a></h6>
+                      <h4 class="product-name"><a href="c34.html">法萊空間設計</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
                 </li>
@@ -332,7 +341,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c35.html">花卉博覽會</a></h6>
+                      <h4 class="product-name"><a href="c35.html">花卉博覽會</a></h4>
+                      <h6 class="product-name">實績分類：室外活動</h6>
                     </div>
                   </div>
                 </li>
@@ -344,7 +354,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c36.html">迎曦診所</a></h6>
+                      <h4 class="product-name"><a href="c36.html">迎曦診所</a></h4>
+                      <h6 class="product-name">實績分類：診所</h6>
                     </div>
                   </div>
                 </li>
@@ -356,7 +367,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c37.html">青崎</a></h6>
+                      <h4 class="product-name"><a href="c37.html">青崎</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
                 </li>
@@ -368,7 +380,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c38.html">冠陽</a></h6>
+                      <h4 class="product-name"><a href="c38.html">冠陽</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
                 </li>
@@ -380,7 +393,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c39.html">厚冠&昌冠</a></h6>
+                      <h4 class="product-name"><a href="c39.html">厚冠&昌冠</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
                 </li>
@@ -392,7 +406,8 @@
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
-                      <h6 class="product-name"><a href="c40.html">政禾診所</a></h6>
+                      <h4 class="product-name"><a href="c40.html">政禾診所</a></h4>
+                      <h6 class="product-name">實績分類：診所</h6>
                     </div>
                   </div>
                 </li>
@@ -467,6 +482,8 @@
               </ul>
               <hr>
               <p class="product-desc mtb_30">一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食，豐富的韓式組合、烤肉、料理深獲在地好評</p>
+
+              <a class="btn" href="" title="" style="margin-left:180px">諮詢頁面</a> 
               <!-- <div id="product">
                 <div class="form-group">
                   <div class="row">
@@ -774,12 +791,12 @@
           <div class="col-md-2 footer-block">
             <h6 class="footer-title ptb_20">產品項目</h6>
             <ul>
-              <li><a href="#">LED廣告招牌</a></li>
-              <li><a href="#">門牌設計製作</a></li>
-              <li><a href="#">品牌/通路燈箱</a></li>
-              <li><a href="#">立體字</a></li>
-              <li><a href="#">指示牌/標示牌</a></li>
-              <li><a href="#">雷射CNC切割</a></li>
+              <li><a href="./p1.html">LED廣告招牌</a></li>
+              <li><a href="./p2.html">門牌設計製作</a></li>
+              <li><a href="./p3.html">品牌/通路燈箱</a></li>
+              <li><a href="./p4.html">立體字</a></li>
+              <li><a href="./p5.html">指示牌/標示牌</a></li>
+              <li><a href="./p6.html">雷射CNC切割</a></li>
             </ul>
           </div>
           <div class="col-md-2 footer-block">
