--- a/case.html
+++ b/case.html
@@ -32,7 +32,7 @@
 <body class="shop-detail">
 
 <div class="top_bgk"> 
-  <div class="mainall">
+  <div class="mainall" style="margin-left: 70px">
     <div class="logo_title fl" style="max-width: 250px">
       <a href="index.html" title="快得力廣告"><img style="max-width: 85%; margin-left: 0px" src="images/logo1105_2.png" alt="快得力廣告" border="0"></a>
     </div>
@@ -163,7 +163,7 @@
             <div class="col-sm-4 col-md-4 col-lg-3">
               <div class="category">
                 <div class="menu-bar" data-target="#category-menu,#category-menu-responsive" data-toggle="collapse" aria-expanded="true" role="button">
-                  <h4 class="category_text">產品項目</h4>
+                  <h4 class="category_text">分頁導覽</h4>
                   <span class="i-bar"><i class="fa fa-bars"></i></span></div>
               </div>
               <div id="category-menu-responsive" class="navbar collapse " aria-expanded="true" style="" role="button">
@@ -200,18 +200,18 @@
           <div id="category-menu" class="navbar collapse in  mb_40" aria-expanded="true" style="" role="button">
             <div class="nav-responsive">
               <ul class="nav  main-navigation collapse in">
-                <li><a href="P1.html">LED廣告招牌</a></li>
-                <li><a href="P2.html">門牌設計製作</a></li>
-                <li><a href="P3.html">品牌/通路燈箱</a></li>
-                <li><a href="P4.html">立體字</a></li>
-                <li><a href="P5.html">指示牌/標示牌</a></li>
-                <li><a href="P6.html">雷射CNC切割</a></li>
+                <li><a href="index.html">首頁</a></li>
+                <li><a href="case.html">工程實績</a></li>
+                <li><a href="product.html">產品項目</a></li>
+                <li><a href="order.html">報價諮詢</a></li>
+                <li><a href="about.html">關於我們</a></li>
+                <li><a href="news.html">最新消息</a></li>
               </ul>
             </div>
           </div>
           <!-- <div class="left_banner left-sidebar-widget mt_30 mb_40"> <a href="#"><img src="images/left1.jpg" alt="Left Banner" class="img-responsive" /></a> </div> -->
-          <div class="left-special left-sidebar-widget mb_50">
-            <div class="heading-part mb_20 ">
+          <div class="left-special left-sidebar-widget mb_50" style="margin-top:30px">
+            <div class="heading-part mb_20">
               <h2 class="main_title" style="color: #f39800">熱門專案/TOP10</h2>
             </div>
             <div id="left-special" class="owl-carousel">
@@ -383,10 +383,10 @@
           </div>
 
           <div class="row mt_10 ">
-            <div class="col-md-6">
+            <div class="col-md-6" style="margin-top:30px">
               <div><a class="thumbnails" href="./c2.html"> <img style="" data-name="product_image" src="images/work/L2.jpg" alt="" /></a></div>
             </div>
-            <div class="col-md-6 prodetail caption product-thumb">
+            <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
               <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c2.html" title="">一拳咖啡</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
@@ -404,10 +404,10 @@
           </div>
 
           <div class="row mt_10">
-            <div class="col-md-6">
+            <div class="col-md-6" style="margin-top:30px">
               <div><a class="thumbnails" href="./c3.html"> <img class="" style="" data-name="product_image" src="images/work/L3.jpg" alt="" /></a></div>
             </div>
-            <div class="col-md-6 prodetail caption product-thumb">
+            <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
               <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c3.html" title="">三喜蛋餅</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
@@ -425,10 +425,10 @@
           </div>
 
           <div class="row mt_10 ">
-            <div class="col-md-6">
+            <div class="col-md-6" style="margin-top:30px">
               <div><a class="thumbnails" href="./c4.html"> <img style="" data-name="product_image" src="images/work/L4.jpg" alt="" /></a></div>
             </div>
-            <div class="col-md-6 prodetail caption product-thumb">
+            <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
               <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c4.html" title="">大魔</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
@@ -479,12 +479,12 @@
           <div class="col-md-2 footer-block">
             <h6 class="footer-title ptb_20">產品項目</h6>
             <ul>
-              <li><a href="#">LED廣告招牌</a></li>
-              <li><a href="#">門牌設計製作</a></li>
-              <li><a href="#">品牌/通路燈箱</a></li>
-              <li><a href="#">立體字</a></li>
-              <li><a href="#">指示牌/標示牌</a></li>
-              <li><a href="#">雷射CNC切割</a></li>
+              <li><a href="./p1.html">LED廣告招牌</a></li>
+              <li><a href="./p2.html">門牌設計製作</a></li>
+              <li><a href="./p3.html">品牌/通路燈箱</a></li>
+              <li><a href="./p4.html">立體字</a></li>
+              <li><a href="./p5.html">指示牌/標示牌</a></li>
+              <li><a href="./p6.html">雷射CNC切割</a></li>
             </ul>
           </div>
           <div class="col-md-2 footer-block">
