--- a/order.html
+++ b/order.html
@@ -32,7 +32,7 @@
   </div>
 </div> -->
 <div class="top_bgk"> 
-  <div class="mainall">
+  <div class="mainall" style="margin-left: 70px">
     <div class="logo_title fl" style="max-width: 250px">
       <a href="index.html" title="快得力廣告"><img style="max-width: 85%; margin-left: 0px" src="images/logo1105_2.png" alt="快得力廣告" border="0"></a>
       <!-- <p>www.qdesign.com.tw</p> -->
@@ -115,7 +115,7 @@
   <div class="mainall1">
     <div class="clearboth"></div>
     <div class="case_t tc mt40">
-      <h3 style="color: #f39800; background: #FFF"><a href="#" style="color: #f39800">報價諮詢表單系統</a></h3>
+      <h3 style="color: #ee7800; background: #FFF"><a href="#" style="color: #ee7800">報價諮詢表單系統</a></h3>
 
     </div>
 
@@ -135,7 +135,7 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
 </script>
 
 <div class="mainall">
-<iframe width="100%" height="2500" src="https://www.surveycake.com/s/g1NKZ" style="overflow:hidden; border:#f39800 1px solid;" allowTransparency="true" frameborder="0"></iframe>
+<iframe width="100%" height="2500" src="https://www.surveycake.com/s/g1NKZ" style="overflow:hidden; border:#ee7800 1px solid;" allowTransparency="true" frameborder="0"></iframe>
 </div>
 
 <!-- 地圖 -->
@@ -207,12 +207,12 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
           <div class="col-md-2 footer-block">
             <h6 class="footer-title ptb_20">產品項目</h6>
             <ul>
-              <li><a href="#" style="color: #777">LED廣告招牌</a></li>
-              <li><a href="#" style="color: #777">門牌設計製作</a></li>
-              <li><a href="#" style="color: #777">品牌/通路燈箱</a></li>
-              <li><a href="#" style="color: #777">立體字</a></li>
-              <li><a href="#" style="color: #777">指示牌/標示牌</a></li>
-              <li><a href="#" style="color: #777">雷射CNC切割</a></li>
+              <li><a href="./p1.html" style="color: #777">LED廣告招牌</a></li>
+              <li><a href="./p2.html" style="color: #777">門牌設計製作</a></li>
+              <li><a href="./p3.html" style="color: #777">品牌/通路燈箱</a></li>
+              <li><a href="./p4.html" style="color: #777">立體字</a></li>
+              <li><a href="./p5.html" style="color: #777">空間指示牌/標示牌</a></li>
+              <li><a href="./p6.html" style="color: #777">雷射CNC切割</a></li>
             </ul>
           </div>
           <div class="col-md-2 footer-block">
