--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <div class="top_bgk"> 
-  <div class="mainall">
+  <div class="mainall" style="margin-left: 70px">
     <div class="logo_title fl" style="max-width: 250px">
       <a href="index.html" title="快得力廣告"><img style="max-width: 85%; margin-left: 0px" src="images/logo1105_2.png" alt="快得力廣告" border="0"></a>
       <!-- <p>www.qdesign.com.tw</p> -->
@@ -198,12 +198,12 @@
           <div class="col-md-2 footer-block">
             <h6 class="footer-title ptb_20">產品項目</h6>
             <ul>
-              <li><a href="#" style="color: #777">LED廣告招牌</a></li>
-              <li><a href="#" style="color: #777">門牌設計製作</a></li>
-              <li><a href="#" style="color: #777">品牌/通路燈箱</a></li>
-              <li><a href="#" style="color: #777">立體字</a></li>
-              <li><a href="#" style="color: #777">空間指示牌/標示牌</a></li>
-              <li><a href="#" style="color: #777">雷射CNC切割</a></li>
+              <li><a href="./p1.html" style="color: #777">LED廣告招牌</a></li>
+              <li><a href="./p2.html" style="color: #777">門牌設計製作</a></li>
+              <li><a href="./p3.html" style="color: #777">品牌/通路燈箱</a></li>
+              <li><a href="./p4.html" style="color: #777">立體字</a></li>
+              <li><a href="./p5.html" style="color: #777">空間指示牌/標示牌</a></li>
+              <li><a href="./p6.html" style="color: #777">雷射CNC切割</a></li>
             </ul>
           </div>
           <div class="col-md-2 footer-block">
