--- a/case.html
+++ b/case.html
@@ -429,11 +429,11 @@
               <div><a class="thumbnails" href="./c4.html"> <img style="" data-name="product_image" src="images/work/L4.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
-              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c4.html" title="">大魔</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c4.html" title="">大魔大滿足鍋物</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 餐廳</span></li>
+                  <span> 鍋物料理</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
                   <span>不銹鋼背光立體字、烤漆壓克力字、帆布廣告</span>
@@ -504,9 +504,9 @@
               <li><a href="./c1.html">一起肉肉吧</a></li>
               <li><a href="./c2.html">一拳咖啡</a></li>
               <li><a href="./c3.html">三喜蛋餅</a></li>
-              <li><a href="./c4.html">大魔</a></li>
-              <li><a href="./c5.html">天天禧</a></li>
-              <li><a href="./c6.html">天承軒</a></li>
+              <li><a href="./c4.html">大魔大滿足鍋物</a></li>
+              <li><a href="./c5.html">京典臻品</a></li>
+              <li><a href="./c6.html">天承軒手工饅頭</a></li>
             </ul>
           </div>
           <div class="col-md-3">
