--- a/index.html
+++ b/index.html
@@ -733,9 +733,9 @@ $(".m_zj").slide({ titCell: ".u_lst1 li", mainCell: ".anli_dl21", autoPlay: fals
               <li><a href="./c1.html" style="color: #777">一起肉肉吧</a></li>
               <li><a href="./c2.html" style="color: #777">一拳咖啡</a></li>
               <li><a href="./c3.html" style="color: #777">三喜蛋餅</a></li>
-              <li><a href="./c4.html" style="color: #777">大魔</a></li>
-              <li><a href="./c5.html" style="color: #777">天天禧</a></li>
-              <li><a href="./c6.html" style="color: #777">天承軒</a></li>
+              <li><a href="./c4.html" style="color: #777">大魔大滿足鍋物</a></li>
+              <li><a href="./c5.html" style="color: #777">京典臻品</a></li>
+              <li><a href="./c6.html" style="color: #777">天承軒手工饅頭</a></li>
             </ul>
           </div>
           <div class="col-md-3">
