--- a/c4.html
+++ b/c4.html
@@ -6,7 +6,7 @@
 <head>
   <!-- =====  BASIC PAGE NEEDS  ===== -->
   <meta charset="utf-8">
-  <title>一起肉肉吧</title>
+  <title>大魔大滿足鍋物</title>
   <!-- =====  SEO MATE  ===== -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="description" content="">
@@ -108,6 +108,19 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c36.html">迎曦診所</a></h4>
+                      <h6 class="product-name">實績分類：診所</h6>
+                    </div>
+                  </div>
+                </li>
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
                       <div class="image product-imageblock"> <a href="c26.html"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26.jpg"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26_2.jpg"> </a> </div>
                     </div>
                   </div>
@@ -118,19 +131,6 @@
                     </div>
                   </div>
                 </li>
-                <!-- <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27.jpg"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c27.html">和旺</a></h4>
-                      <h6 class="product-name">實績分類：小吃店</h6>
-                    </div>
-                  </div>
-                </li> -->
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
@@ -157,6 +157,19 @@
                     </div>
                   </div>
                 </li> -->
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27.jpg"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c27.html">和旺</a></h4>
+                      <h6 class="product-name">實績分類：小吃店</h6>
+                    </div>
+                  </div>
+                </li>
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
@@ -196,7 +209,7 @@
                     </div>
                   </div>
                 </li>
-                <!-- <li class="item product-layout-left mb_20">
+                <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
                       <div class="image product-imageblock"> <a href="c33.html"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33.jpg"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33_2.jpg"> </a> </div>
@@ -208,8 +221,8 @@
                       <h6 class="product-name">實績分類：紋繡美睫</h6>
                     </div>
                   </div>
-                </li> -->
-                <li class="item product-layout-left mb_20">
+                </li>
+                <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
                       <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34.jpg"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34_2.jpg"> </a> </div>
@@ -221,7 +234,7 @@
                       <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
-                </li>
+                </li> -->
                 <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
@@ -238,51 +251,12 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c36.html">迎曦診所</a></h4>
-                      <h6 class="product-name">實績分類：診所</h6>
-                    </div>
-                  </div>
-                </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
                       <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37.jpg"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37_2.jpg"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
                     <div class="caption product-detail">
                       <h4 class="product-name"><a href="c37.html">青崎</a></h4>
-                      <h6 class="product-name">實績分類：公司行號</h6>
-                    </div>
-                  </div>
-                </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c38.html">冠陽</a></h4>
-                      <h6 class="product-name">實績分類：公司行號</h6>
-                    </div>
-                  </div>
-                </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c39.html"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39.jpg"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c39.html">厚冠&昌冠</a></h4>
                       <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
@@ -300,6 +274,32 @@
                     </div>
                   </div>
                 </li>
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c38.html">冠陽</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
+                    </div>
+                  </div>
+                </li>
+                <!-- <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c39.html"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39.jpg"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c39.html">厚冠&昌冠</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
+                    </div>
+                  </div>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -307,58 +307,44 @@
         <div class="col-sm-8 col-md-8 col-lg-9 mtb_30">
           <!-- =====  BANNER STRAT  ===== -->
           <div class="breadcrumb ptb_20">
-            <h1>一起肉肉吧</h1>
+            <h1>大魔大滿足鍋物</h1>
             <ul>
               <li><a href="index.html">首頁</a></li>
               <li><a href="#">工程實績</a></li>
-              <li class="active">餐廳</li>
+              <li class="active">鍋物料理</li>
             </ul>
           </div>
           <!-- =====  BREADCRUMB END===== -->
           <div class="row mt_10 ">
             <div class="col-md-6">
-              <div><a class="thumbnails"> <img style="" data-name="product_image" src="images/work/4.jpg" alt="" /></a></div>
+              <div><a class="thumbnails"> <img style="" data-name="product_image" src="images/work/c4m.jpg" alt="" /></a></div>
 
               <div id="product-thumbnail" class="owl-carousel">
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/M1.jpg" data-fancybox="group1"> <img src="images/work/1.jpg" title="亞特圓形招牌" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c4m1.jpg" data-fancybox="group1"> <img src="images/work/c4m1.jpg" title="帆布廣告" /></a></div>
                 </div>
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/M2.jpg" data-fancybox="group1"> <img src="images/work/2.jpg" title="走廊燈箱" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c4m2.jpg" data-fancybox="group1"> <img src="images/work/c4m2.jpg" title="不銹鋼背光立體字+烤漆壓克力字" /></a></div>
                 </div>
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/M3.jpg" data-fancybox="group1"> <img src="images/work/3.jpg" title="玻璃貼" /></a></div>
-                </div>
-                <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/M4.jpg" data-fancybox="group1"> <img src="images/work/4.jpg" title="帆布架廣告" /></a></div>
-                </div>
-                <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/M5.jpg" data-fancybox="group1"> <img src="images/work/5.jpg" title="大圖輸出" /></a></div>
-                </div>
-                <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/M6.jpg" data-fancybox="group1"> <img src="images/work/6.jpg" title="牆面貼割字" /></a>
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/M7.jpg" data-fancybox="group1"> <img src="images/work/7.jpg" title="廣告招牌" /></a>
-                  </div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c4m3.jpg" data-fancybox="group1"> <img src="images/work/c4m3.jpg" title="牆面大圖" /></a></div>
                 </div>
               </div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name"><a href="#" title="">Gogi Gogi 一起肉肉吧</a></h4>
+              <h4 data-name="product_name" class="product-name"><a href="#" title="">大魔大滿足鍋物</a></h4>
               <hr>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 餐廳</span></li>
+                  <span> 鍋物料理</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>亞特圓形招牌、走廊燈箱、帆布架廣告</span>
+                  <span>不銹鋼背光立體字、烤漆壓克力字、帆布廣告</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食，豐富的韓式組合、烤肉、料理深獲在地好評</p>
+              <p class="product-desc mtb_30">大魔位於西屯區<br>是主打高級食材的鍋物料理店</p>
 
               <a class="btn" href="" title="" style="margin-left:180px">諮詢頁面</a> 
             </div>
@@ -373,24 +359,22 @@
                 </ul>
                 <div class="tab-content mt_20">
                   <div class="tab-pane active" id="1c">
-                    <p>這次與韓國燒肉gogigogi店頭行銷是一個將招牌應用很完整的案例，這次的方式，團隊建議裝置戶外廣告、街頭創意燈箱、LOGO字、帆布宣傳，來看看這次亞特文創規劃的廣告招牌各自有哪些特性：</p>
+                    <p>大魔位於西屯區，是主打高級食材的鍋物料理店</p>
                     <br>
-                    <p>🔺#戶外大型廣告帆布(背打光)🔺</p>
-                    <p>大型的帆布廣告，放置在戶外有很醒目的行銷效能，並於幾條街外都能清楚判別廣告用途，在專業的製作下擁有高解析度的輸出、色彩鮮艷顯色效果，適用於大版面輸出。</p>
-                    <p>🔺#亞特圓形招牌🔺</p>
-                    <p>這類型的燈箱廣告很適合吸引過路客，舉凡走在人行道逛街的遊客，包括餐飲、展覽、連鎖飲料、設計店家，適用的商店街小招牌。</p>
-                    <p>🔺#立體發光字🔺</p>
-                    <p>LED發光字源，應用的方面也很廣泛，以LOGO發光燈字為主體，造型多變，強化店頭行銷的記憶點，光源的製程是團隊製作上的。</p>
-                    <p>🔺#帆布架廣告🔺</p>
-                    <p>即時性的更換，成本低也符合當季廣告的期待，讓準備前往的顧客觀察到最近店內正走的套餐優惠，很適合一季更換的店家使用。</p>
+                    <p>🔺#帆布廣告🔺</p>
+                    <p>主打高級食材，運用大圖面的印象，吸引過路客的目光，勾起食慾以及加深店舖印象。</p>
+                    <p>🔺#不銹鋼背光立體字+烤漆壓克力字🔺</p>
+                    <p>以金屬字為主體，風格沈穩，不但能表現出質感，更能強化店頭記憶點。</p>
+                    <p>🔺#牆面大圖🔺</p>
+                    <p>色調搭配招牌的主體色，並以外國語言展現出專業度，整體讓人沈浸於異國風情之中。</p>
                     <br>
-                    <p>亞特文創提供的招牌使用造型多元、宣傳便利，適應於不同地理類型的運用，也給客戶更多的選擇，相信專業團隊，就找亞特文創。</p>
+                    <p>快得力提供您造型多元、宣傳便利，適應於不同類型之招牌運用，也觀迎您提出更多的需求，相信專業團隊，就找快得力廣告。</p>
                   </div>
                   <div class="tab-pane" id="3c">
-                    <p>Gogi Gogi 一起肉肉吧</p>
-                    <p>地址：台中市北區三民路三段166-3號</p>
-                    <p>電話：(04) 2223-5085</p>
-                    <p>時間：11:30～22:30</p>
+                    <p>大魔大滿足鍋物</p>
+                    <p>地址：台中市西屯區西屯路三段251號</p>
+                    <p>電話：04-24618887</p>
+                    <p>時間：1200-1500 / 1700-2200</p>
                   </div>
                 </div>
               </div>
@@ -407,41 +391,25 @@
             <div class="product-layout product-grid related-pro owl-carousel mb_50">
               <div class="item">
                 <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/1.jpg" alt="" title="" class="img-responsive"></a> </div>
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c4m1.jpg" alt="" title="" class="img-responsive"></a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p3.html" title="">亞特圓形招牌</a></h6>
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p5.html" title="">帆布廣告</a></h6>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/2.jpg" alt="" title="" class="img-responsive"></a></div>
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c4m2.jpg" alt="" title="" class="img-responsive"></a></div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p3.html" title="">走廊燈箱</a></h6>
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p4.html" title="">不銹鋼背光立體字+烤漆壓克力字</a></h6>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/3.jpg" alt="" title="" class="img-responsive"></a> </div>
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c4m3.jpg" alt="" title="" class="img-responsive"></a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p4.html" title="">玻璃貼</a></h6>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/4.jpg" alt="" title="" class="img-responsive"></div>
-                  <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p1.html" title="">廣告招牌</a></h6>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/5.jpg" alt="" title="" class="img-responsive"></a> </div>
-                  <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p1.html" title="">大圖輸出</a></h6>
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p5.html" title="">牆面大圖</a></h6>
                   </div>
                 </div>
               </div>
