--- a/c1.html
+++ b/c1.html
@@ -360,7 +360,7 @@
               <hr>
               <p class="product-desc mtb_30">一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食，豐富的韓式組合、烤肉、料理深獲在地好評</p>
 
-              <a class="btn" href="" title="" style="margin-left:180px">諮詢頁面</a> 
+              <a class="btn" href="./order.html" title="" style="margin-left:180px">諮詢頁面</a> 
             </div>
           </div>
           <div class="row">
