--- a/c2.html
+++ b/c2.html
@@ -321,19 +321,19 @@
 
               <div id="product-thumbnail" class="owl-carousel">
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m1.jpg" data-fancybox="group1"> <img src="images/work/c2m1.jpg" title="亞特圓形招牌" style="height:70px" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m1.jpg" data-fancybox="group1"> <img src="images/work/c2m1.jpg" title="亞特圓形招牌" style="height:60px" /></a></div>
                 </div>
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m2.jpg" data-fancybox="group1"> <img src="images/work/c2m2.jpg" title="折板招牌+無邊字" style="height:70px" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m2.jpg" data-fancybox="group1"> <img src="images/work/c2m2.jpg" title="折板招牌+無邊字" style="height:60px" /></a></div>
                 </div>
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m3.jpg" data-fancybox="group1"> <img src="images/work/c2m3.jpg" title="不銹鋼毛絲面標示" style="height:70px" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m3.jpg" data-fancybox="group1"> <img src="images/work/c2m3.jpg" title="不銹鋼毛絲面標示" style="height:60px" /></a></div>
                 </div>
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m4.jpg" data-fancybox="group1"> <img src="images/work/c2m4.jpg" title="背光無邊字+壓克力立體字" style="height:70px" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m4.jpg" data-fancybox="group1"> <img src="images/work/c2m4.jpg" title="背光無邊字+壓克力立體字" style="height:60px" /></a></div>
                 </div>
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m5.jpg" data-fancybox="group1"> <img src="images/work/c2m5.jpg" title="磁吸式5連板價目表" style="height:70px" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c2m5.jpg" data-fancybox="group1"> <img src="images/work/c2m5.jpg" title="磁吸式5連板價目表" style="height:60px" /></a></div>
                 </div>
               </div>
             </div>
@@ -352,7 +352,7 @@
               <hr>
               <p class="product-desc mtb_30">一拳咖啡位於北區梅庭街，為舒芙蕾及鬆餅專賣店，選用日本進口麵粉<br>小農鮮奶及台灣牧場元氣蛋，口感綿密鬆軟，入口即化</p>
 
-              <a class="btn" href="" title="" style="margin-left:180px">諮詢頁面</a> 
+              <a class="btn" href="./order.html" title="" style="margin-left:180px">諮詢頁面</a> 
             </div>
           </div>
           <div class="row">
