--- a/c5.html
+++ b/c5.html
@@ -349,7 +349,7 @@
               <hr>
               <p class="product-desc mtb_30">京典臻品位於西屯區福雅路<br>是天然水晶礦石專賣店</p>
 
-              <a class="btn" href="" title="" style="margin-left:180px">諮詢頁面</a> 
+              <a class="btn" href="./order.html" title="" style="margin-left:180px">諮詢頁面</a> 
             </div>
           </div>
           <div class="row">
