--- a/c3.html
+++ b/c3.html
@@ -346,7 +346,7 @@
               <hr>
               <p class="product-desc mtb_30">三喜蛋餅位於北區太平路<br>是在地眾所皆知的古早味蛋餅專賣店</p>
 
-              <a class="btn" href="" title="" style="margin-left:180px">諮詢頁面</a> 
+              <a class="btn" href="./order.html" title="" style="margin-left:180px">諮詢頁面</a> 
             </div>
           </div>
           <div class="row">
