--- a/c4.html
+++ b/c4.html
@@ -346,7 +346,7 @@
               <hr>
               <p class="product-desc mtb_30">大魔位於西屯區<br>是主打高級食材的鍋物料理店</p>
 
-              <a class="btn" href="" title="" style="margin-left:180px">諮詢頁面</a> 
+              <a class="btn" href="./order.html" title="" style="margin-left:180px">諮詢頁面</a> 
             </div>
           </div>
           <div class="row">
