--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     </ul>
   </div>
 </div>
-<div class="wjdh-banner" style="background-image: url(./images/about.jpg);"></div>
+<div class="wjdh-banner" style="background-image: url(./images/about1.jpg);"></div>
 <div class="cat-menu">
   <div class="container">
     <div class="menu-list">
