--- a/c5.html
+++ b/c5.html
@@ -309,9 +309,9 @@
           <div class="breadcrumb ptb_20">
             <h1>京典臻品</h1>
             <ul>
-              <li><a href="index.html">首頁</a></li>
-              <li><a href="#">工程實績</a></li>
-              <li class="active">水晶飾品店</li>
+              <!-- <li><a href="index.html">首頁</a></li> -->
+              <!-- <li><a href="#">工程實績</a></li> -->
+              <!-- <li class="active">水晶飾品店</li> -->
             </ul>
           </div>
           <!-- =====  BREADCRUMB END===== -->
