--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "">
+<html xmlns="">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="favicon.ico" rel="icon" type="image/x-icon" />
@@ -130,8 +130,8 @@
   </div>
   <div class="bd">
     <ul>
-     <li style="background:url(images/cov1.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
-<li style="background:url(images/ban01.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
+     <li style="background:url(images/c01.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
+<li style="background:url(images/c02.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
 
     </ul>
   </div>
@@ -149,7 +149,7 @@
     </ul>
   </div>
 </div>
-<div class="search_dbg">
+<!-- <div class="search_dbg">
   <div class="mainall">
     <div class="search_zi"> </div>
     <div class="search1 ">
@@ -160,7 +160,7 @@
       </form>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="pro_dbg">
   <div class="mainall1">
@@ -193,32 +193,32 @@
       <ul>
         <li>
           <div class="pic"> <a href="#" title="LED廣告招牌" target="_blank"> <img src="images/s1.jpg" alt="LED廣告招牌"/> </a> </div>
-          <div class="info"> <a href="#" title="LED廣告招牌" target="_blank" style="color: #FFF">LED廣告招牌</a> </div>
+          <div class="info"> <a href="#" title="LED廣告招牌" target="_blank">LED廣告招牌</a> </div>
           <em></em>
         </li>
         <li>
           <div class="pic"> <a href="#" title="門牌設計製作" target="_blank"> <img src="images/s2.jpg" alt="門牌設計製作"/> </a> </div>
-          <div class="info"> <a href="#" title="門牌設計製作" target="_blank" style="color: #FFF">門牌設計製作</a> </div>
+          <div class="info"> <a href="#" title="門牌設計製作" target="_blank">門牌設計製作</a> </div>
           <em></em>
         </li>
         <li>
           <div class="pic"> <a href="#" title="品牌/通路燈箱" target="_blank"> <img src="images/s3.jpg" alt="品牌/通路燈箱"/> </a> </div>
-          <div class="info"> <a href="#" title="品牌/通路燈箱" target="_blank" style="color: #FFF">品牌/通路燈箱</a> </div>
+          <div class="info"> <a href="#" title="品牌/通路燈箱" target="_blank" style="">品牌/通路燈箱</a> </div>
           <em></em>
         </li>
         <li>
           <div class="pic"> <a href="#" title="立體字" target="_blank"> <img src="images/s4.jpg" alt="立體字"/> </a> </div>
-          <div class="info"> <a href="#" title="立體字" target="_blank" style="color: #FFF">立體字</a> </div>
+          <div class="info"> <a href="#" title="立體字" target="_blank">立體字</a> </div>
           <em></em>
         </li>
         <li>
           <div class="pic"> <a href="#" title="指示牌/標示牌" target="_blank"> <img src="images/s5.jpg" alt="指示牌/標示牌"/> </a> </div>
-          <div class="info"> <a href="#" title="指示牌/標示牌"  target="_blank" style="color: #FFF">空間指示牌/標示牌</a> </div>
+          <div class="info"> <a href="#" title="指示牌/標示牌"  target="_blank">空間指示牌/標示牌</a> </div>
           <em></em>
         </li>
         <li>
           <div class="pic"> <a href="#" title="雷射CNC切割" target="_blank"> <img src="images/s6.jpg" alt="雷射CNC切割"/> </a> </div>
-          <div class="info"> <a href="#" title="雷射CNC切割" target="_blank" style="color: #FFF">雷射CNC切割</a> </div>
+          <div class="info"> <a href="#" title="雷射CNC切割" target="_blank">雷射CNC切割</a> </div>
           <em></em>
         </li>
         <!-- <li>
@@ -264,7 +264,7 @@
     </div>
     <div class="gg1_tel fr">
       <!-- <p>即刻來電：<span>04-23829500</span></p> -->
-      <a href="" title="免費下載" style="margin: 55px 300px 0 0">由此去</a> 
+      <a href="https://drive.google.com/file/d/1w0f_AH-p7jEjKl6sMYPflJn2342hQJuw/view" title="免費下載" style="margin: 55px 300px 0 0">由此去</a> 
     </div>
   </div>
 </div>
