--- a/news.html
+++ b/news.html
@@ -58,7 +58,7 @@
     </ul>
   </div>
 </div>
-<div class="wjdh-banner" style="background-image: url(./images/news.jpg);"></div>
+<div class="wjdh-banner" style="background-image: url(./images/news1.jpg);"></div>
 <div class="cat-menu">
   <div class="container">
     <div class="menu-list">
