--- a/order.html
+++ b/order.html
@@ -110,17 +110,14 @@
     </div>
   </div>
 </div> -->
-
+<div class="wjdh-banner" style="background-image: url(./images/order1.jpg);"></div>
 <div class="pro_dbg" style="height:auto">
   <div class="mainall1">
     <div class="clearboth"></div>
     <div class="case_t tc mt40">
       <h3 style="color: #ee7800; background: #FFF"><a href="#" style="color: #ee7800">報價諮詢表單系統</a></h3>
-
     </div>
-
   </div>
-
 </div>
 
 
