--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
   </div>
   <div class="bd">
     <ul>
-     <li style="background:url(images/c01.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
-<li style="background:url(images/c02.jpg) no-repeat center center"> <!-- <a target="_blank" href="products/index.html" title=""></a> --> </li>
-
+     <li style="background:url(images/c01.jpg) no-repeat center center"></li>
+     <li style="background:url(images/c02.jpg) no-repeat center center"></li>
+     <li style="background:url(images/c03.jpg) no-repeat center center"></li>
     </ul>
   </div>
   <span class="prev"></span> <span class="next"></span>
